crates/dbt-jinja/minijinja/tests/snapshots/test_templates__vm@err_block_in_macro.txt.snap
---
source: fs/sa/crates/dbt-jinja/minijinja/tests/test_templates.rs
description: "{% macro two_args(a, b) %}\n  {% block foo %}{% endblock %}\n{% endmacro %}"
info:
  __minijinja_current_path: err_block_in_macro.txt
  __minijinja_current_span:
    start_line: 1
    start_col: 1
    start_offset: 0
    end_line: 1
    end_col: 1
    end_offset: 0
input_file: fs/sa/crates/dbt-jinja/minijinja/tests/inputs/err_block_in_macro.txt
---
!!!SYNTAX ERROR!!!

Error {
    kind: SyntaxError,
    detail: "block tags in macros are not allowed",
    name: "err_block_in_macro.txt",
}

syntax error: block tags in macros are not allowed
(in err_block_in_macro.txt:2:12)
