crates/dbt-jinja/minijinja/tests/snapshots/test_templates__vm@err_missing_nested_filter.txt.snap
---
source: fs/sa/crates/dbt-jinja/minijinja/tests/test_templates.rs
description: "{{ \"foo\"|upper|missingFilter|lower }}"
info:
  __minijinja_current_path: err_missing_nested_filter.txt
  __minijinja_current_span:
    end_col: 1
    end_line: 1
    end_offset: 0
    start_col: 1
    start_line: 1
    start_offset: 0
input_file: fs/sa/crates/dbt-jinja/minijinja/tests/inputs/err_missing_nested_filter.txt
---
!!!ERROR!!!

Error {
    kind: UnknownFilter,
    detail: "filter missingFilter is unknown",
    name: "err_missing_nested_filter.txt",
}

unknown filter: filter missingFilter is unknown
(in err_missing_nested_filter.txt:1:16)
