crates/dbt-jinja/minijinja/tests/snapshots/test_templates__vm@err_partial_float.txt.snap
---
source: fs/sa/crates/dbt-jinja/minijinja/tests/test_templates.rs
description: "{{ 42e+ }}"
info:
  __minijinja_current_path: err_partial_float.txt
  __minijinja_current_span:
    start_line: 1
    start_col: 1
    start_offset: 0
    end_line: 1
    end_col: 1
    end_offset: 0
input_file: fs/sa/crates/dbt-jinja/minijinja/tests/inputs/err_partial_float.txt
---
!!!SYNTAX ERROR!!!

Error {
    kind: SyntaxError,
    detail: "invalid float",
    name: "err_partial_float.txt",
}

syntax error: invalid float
(in err_partial_float.txt:1:8)
